<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_mini"
            android:layout_marginTop="@dimen/default_margin_mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modeOfTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_mini"
            android:layout_marginStart="@dimen/default_margin_mini"
            android:layout_marginTop="@dimen/default_margin_mini"
            android:text="@string/mode_of_transport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.417" />


        <TextView
            android:id="@+id/modeCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_mini"
            android:layout_marginTop="@dimen/default_margin_mini"
            android:text="@string/car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modeOfTransport" />

        <TextView
            android:id="@+id/modeTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_mini"
            android:layout_marginTop="@dimen/default_margin_mini"
            android:text="@string/train"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modeCar" />

        <Button
            android:id="@+id/buttonNavigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_mini"
            android:layout_marginStart="@dimen/default_margin_mini"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/navigate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modeTrain" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>